# fishing-vibe

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  compose.yml  convert_coords.py  pyproject.toml  skills-lock.json
.agents/skills/geocode/: .env.example  SKILL.md  geocode.py
.agents/skills/tianditu-geocode/: .env.example  SKILL.md  tianditu_geocode.py
docs/: fishing-spot-implementation-plan.md  osm-import.md  postgis.md
docs/adr/: 0001-video-transcription.md  0002-spot-precision-tiers.md
docs/agents/: issue-tracker.md
miniprogram/: README.md  app.json  app.wxss  project.config.json
miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
miniprogram/utils/: data.js  fishing-spots-data.js
osm/: hubei-flex.lua
scripts/: backfill_transcripts.py  collect_douyin_fishing_spots.py  export_fishing_spots_map_data.py  extract_douyin_video_comments.py  gen_markers.py  import_osm_hubei.sh  migrate_sqlite_to_postgis.py  reextract_transcript_spots.py  rerun_collect_missing_quality.py  test_douyin_comment_spots.py  update_fishing_spots_geocode.py
spot_intake/: __init__.py  config.py  extract.py  fixtures.py  intake.py  ports.py  proc.py  vocabulary.py
spot_intake/adapters/: __init__.py  geocode_skill.py  llm_openai.py  mimo_asr.py  opencli_browser.py  postgis_store.py  sqlite_store.py
tests/: test_extract.py  test_intake.py  test_mimo_asr.py  test_store.py  test_vocabulary.py
tools/: transcribe_mimo_asr.py
web/: README.md  app.js  fishing-spots.json  index.html  styles.css
